welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:17: error: value avance is not a member of Unit
droite();avance();gauche()avance() 
                          ^